# taskrs_diesel

./: .gitignore  Cargo.toml
taskrs-db/: Cargo.toml
taskrs-db/migrations/2021-07-08-175839_create_users_auth/: up.sql
taskrs-db/migrations/2021-08-23-182315_categories/: up.sql
taskrs-db/src/: lib.rs
taskrs-db/src/models/: auth_refresh_token.rs  category.rs  mod.rs  permission.rs  project.rs  user.rs
taskrs-server/: Cargo.toml  build.rs  openapi.yml
taskrs-server/config/: .gitignore  debug.sample.toml  log.sample.yml
taskrs-server/http/: auth.http  users.http
taskrs-server/migrations/: .gitignore  20210930195242_setup.sql  20210930195457_users.sql  20210930195502_auth.sql  20210930195507_permissions.sql  20210930195514_categories.sql
taskrs-server/migrations/2021-07-08-175839_create_users/: up.sql
taskrs-server/migrations/2021-07-08-175839_create_users_auth/: down.sql
taskrs-server/migrations/2021-07-11-151244_create_auth_refresh_tokens/: down.sql  up.sql
taskrs-server/migrations/2021-10-06-144504_projects/: down.sql  up.sql
taskrs-server/permissions/: auth.json  categories.json  permissions.json  permissions.md  projects.json  user.json
taskrs-server/src/: config.rs  main.rs  permissions.rs  utils.rs
taskrs-server/src/api/: mod.rs
taskrs-server/src/db/: auth_refresh_token.rs  category.rs  mod.rs  permission.rs  project.rs  schema.rs  user.rs
taskrs-server/src/middleware/: auth.rs
taskrs-server/src/models/: create_entity_result.rs  delete_entity.rs  mod.rs  request_filter.rs  user_token.rs
taskrs-server/src/permissions/: auth.rs  mod.rs  (+4 more)
(+48 files in other folders)
