[package]
name = "taskrs-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
log = "0.4"
r2d2 = "0.8"
rand = "0.8"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }