[package]
name = "taskrs-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Webserver
actix-cors = "0.5"
actix-service = "1.0"
actix-web = "3.3"
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
config = {version = "0.11", features = ["toml", "json", "yaml", "ini"]}
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
futures = "0.3"
jsonwebtoken = "7.2"
lazy_static = "1.4"
log = "0.4"
log4rs = {version = "1.0", features = [] }
r2d2 = "0.8"
rand = "0.8"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
serde_json = "1.0"